// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/query/:region/?endpoint=:endpoint error response should match snapshot 1`] = `
Object {
  "error": "Failed to receive Battle.net API data",
}
`;

exports[`/query/:region/?endpoint=:endpoint should match snapshot 1`] = `
Object {
  "data": "sample data for /sample/endpoint",
}
`;
